# file

./: .cvsignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  0-AI-MANIFEST.a2ml  AESWAAA  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  DOIT  EXPLAINME.adoc  INSTALL  Justfile  LEGAL.NOTICE  MAINT  Makefile.am  Makefile.in  Puru autobot  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README  README.DEVELOPER  README.adoc  README.md  RELEASE-PROCEDURE  TODO  a2ml.mgc  acinclude.m4  aclocal.m4  config.guess  config.h.in  configure  configure.ac  configure.in  contractile.just  examples-with-patch  examples-without-patch  (+12 more)
.github/workflows/: boj-build.yml  casket-pages.yml  codeql.yml
.machine_readable/: ADJUST.contractile  INTENT.contractile  MUST.contractile  TRUST.contractile
.machine_readable/agent_instructions/: README.adoc  coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/contractiles/trust/: Trustfile.a2ml
.machine_readable/integrations/: feedback-o-tron.a2ml  proven.a2ml  verisimdb.a2ml  vexometer.a2ml
.well-known/: ai.txt  humans.txt  security.txt
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
doc/: .cvsignore  Makefile.am  Makefile.in  file.man  libmagic.man  magic.man
fuzz/: magic_fuzzer.c
llvm-assembly-example-files/: CONTENTS
llvm-assembly-example-files/asm/: README
llvm-assembly-example-files/llvm/: README  llvm.o.ll  llvm.s  opencl.bc  opencl.o.ll
llvm-assembly-examples/: README
llvm-assembly-examples/llvm/: llvm.c  llvm.o.s  opencl.cl  opencl.ll
magic/: .cvsignore  Header  Makefile.am  Makefile.in  create_filemagic_flac  magic.mime  magic2mime
magic/Magdir/: Localstuff  a2ml  acorn  adi  adventure  aes  algol68  allegro  alliant  alpha  amanda  amigaos  amos  android  animation  aout  apache  apl  apple  application  applix  apt  archive  arm  asammdf  assembler  asterix  atari  att3b  audio  basis  beetle  ber  bflt  bioinformatics  biosig  blackberry  blcr  blender  blit  (+283 more)
magic/Magdir/old/: TODO.cgm  amdahl  ar  basic  bmp  bsdi  ditroff  floppy.raw  html  imagen  iris  mips  netbsd  postscript  rle  sunraster  x11  xenix
magic/scripts/: create_filemagic_flac
python/: .cvsignore  CHANGELOG.md  Makefile.am  Makefile.in  README  README.md  example.py  magic.py  py_magic.c  py_magic.h  setup.py
python/Coinbase/: Coinbase python
src/: .cvsignore  AAWARN.TXT  BNF  Makefile  Makefile.am  Makefile.in  Makefile.std  PORTING  README.ftp  acconfig.h  apprentice.c  apptype.c  ascmagic.c  asctime_r.c  asprintf.c  buffer.c  cdf.c  cdf.h  cdf_time.c  compress.c  config.h  ctime_r.c  der.c  der.h  dprintf.c  elfclass.h  encoding.c  file.c  file.h  file_opts.h  fmtcheck.c  fsmagic.c  funcs.c  getline.c  getopt_long.c  gmtime_r.c  internat.c  is_csv.c  is_json.c  is_simh.c  (+27 more)
tests/: .cvsignore  CVE-2014-1943.result  JW07022A.mp3.result  Makefile.am  README  arj.result  bcachefs.result  bgcode.result  cl8m8ocofedso.result  efi-signature-list-sha256.result  fit-map-data.result  gedcom.magic  gedcom.result  gpkg-1-zst.result  hddrawcopytool.result  issue359xlsx.result  pnm3.result  rpm-v3.0-bin-powerpc64.result.rej  rpm-v3.0-bin-s390x.result.rej  rpm-v3.0-bin-x86_64.result.rej  rpm-v3.0-src.result.rej  test  test.c  utf16nul.result  utf16nul.testfile
