dnl Process this file with autoconf to produce a configure script.
AC_INIT(file.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_RDEV

dnl Checks for headers
AC_HEADER_SYS_WAIT

AC_OUTPUT(Makefile)
